public/styles.css
body {
    background-image: url("fsh-spin.gif");
    background-color: rgb(150, 207, 221);
}

#window-area {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 98vw;
    height: 98vh;
    overflow: hidden;
}

#mainwindow {
    max-width: 350px;
    --window-background-color: #45a5af;
}

#bpm-input {
    width: 50px;
}

#tension-multiplier-select {
    width: 50px
}

input {
    font: var(--font);
    max-width: 250px;
}

@keyframes closeAnim {
    from {
        opacity: 1;
        transform: scale(1);
    }

    to {
        opacity: 0;
        transform: scale(0.95);
    }
}

.window.closing {
    animation: closeAnim 0.25s ease-in-out forwards;
}

.hidden {
    display: none;
}

